tests/errors/variant_flow/empty_enum_switch_with_spurious_arm_errors.sim

            enum Void: Copy + Drop {}
            fn f(v: Void) {
              entry:
                switchEnum(v) [Nope: bad]
              bad: return
            }
            