tests/errors/variant_flow/empty_enum_switch_with_spurious_arm_errors.err.expected
error: at 5:17: [TC-SwitchArmUnknownVariant] In function 'f', block 'entry': variant 'Nope' is not part of enum 'Void'
   |
 5 |                 switchEnum(v) [Nope: bad]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
